# openline-jspace-commit-bridge

./: .gitignore  LICENSE  MANIFEST.json  README.md  RUN_REPORT.json  pyproject.toml
docs/: ADAPTER_SPEC.md  ARCHITECTURE.md  CLAIM_BOUNDARY.md
examples/: jspace_fabrication_readout.json  jspace_prompt_injection_readout.json
launch/: thread_copy.md
openline_jspace_commit_bridge/: __init__.py  adapters.py  commit_barrier.py  demo.py  receipts.py  schemas.py  witnesses.py
tests/: test_commit_bridge.py
