[project]
name = "openline-jspace-commit-bridge"
version = "0.1.0"
description = "Prototype bridge between J-space-like workspace readouts and OpenLine commit governance."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Terrynce White"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
